deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-autch
spec:
  selector:
    app: backend-autch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
